<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ActivityMain$PlaceholderFragment">

    <TextView
        android:text="@string/strMain1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:id="@+id/txtMain1"
        android:textSize="30sp"
        android:background="@color/abc_search_url_text_normal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLaunch"
        android:id="@+id/btnLauncher"
        android:layout_below="@+id/txtMain1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onLaunchNew"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSms"
        android:id="@+id/btnSms"
        android:layout_alignTop="@id/btnLauncher"
        android:layout_centerHorizontal="true"
        android:onClick="onLaunchText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTele"
        android:id="@+id/btnTele"
        android:layout_alignTop="@id/btnLauncher"
        android:layout_alignParentRight="true"
        android:onClick="onLaunchPhone"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strWeb"
        android:id="@+id/btnWeb"
        android:layout_below="@id/btnLauncher"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@id/btnLauncher"
        android:onClick="onLaunchBrowser"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strMap"
        android:id="@+id/btnMap"
        android:layout_below="@+id/btnSms"
        android:layout_centerHorizontal="true"
        android:onClick="onLaunchMaps"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strShare"
        android:id="@+id/btnShare"
        android:layout_below="@+id/btnTele"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@id/btnTele"
        android:onClick="onLaunchShare"/>

</RelativeLayout>
